--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "typed.js": "^2.0.16"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.1"
